# HogoTest

./: Archie.puml  build.gradle  build.gradle.kts  copilot_instructions.txt  gradle.properties  module_config.gradle.kts  settings.gradle  settings.gradle.kts
aidlmodule/: build.gradle.kts
aldlserver/: build.gradle.kts
aldlserver/src/main/: AndroidManifest.xml
aldlserver/src/main/res/values/: strings.xml  themes.xml
aldlserver/src/main/res/values-night/: themes.xml
annotation/: build.gradle.kts
app/: SignningConfig.gradle.kts  build.gradle  build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: activity_font_test.xml  activity_main.xml  activity_main2.xml  activity_recyclerview.xml  layout_test.xml  touch_event_test.xml
app/src/main/res/values/: attrs.xml  strings.xml
buildSrc/: build.gradle.kts
composeframe2/: build.gradle.kts
composeframe2/src/main/: AndroidManifest.xml
composeframe2/src/main/assets/: list_page.json
filemanager/: build.gradle.kts
filemanager/src/main/: AndroidManifest.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
musicplayer/: build.gradle.kts
musicplayer/src/main/: AndroidManifest.xml
mycommon/: ThreadCheckProcessor.gradle.kts  build.gradle.kts
mycommon/src/main/: AndroidManifest.xml
nativelib/: build.gradle.kts
nativelib/src/main/: AndroidManifest.xml
nativelib/src/main/cpp/: CMakeLists.txt  mouse_async.cpp  mouse_common.cpp  mouse_common.h  nativelib.cpp  usb_test.cpp
nativelib/src/main/cpp/libusb/: CMakeLists.txt
plugins/: build.gradle.kts
(+142 files in other folders)
